cros: Add layers to bring the launcher open/close animation back

This animation was removed unintentionally, this CL brings it back.
Also added better comments so the animation's importance is more
obvious.

Bug: 910496
Change-Id: If505bea1683d7ae456dcedbdb0a9e97ea58e02de
Reviewed-on: https://chromium-review.googlesource.com/c/1368604
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Reviewed-by: Mitsuru Oshima (gardener - slow) <oshima@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616080}
Former-commit-id: 3dfd599299ec7fd63069e1c78542861de1a85314